--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -53,7 +53,7 @@
         </a>
         
 
-        <a href="listado_compras" class="list-group-item list-group-item-action bg-light">
+        <a href="ver_compras" class="list-group-item list-group-item-action bg-light">
           <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/icon_cart.svg' %}">
           </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Listado Compras</small>
         </a>
@@ -74,10 +74,10 @@
           </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Listado Produccion</small>
         </a>
 
-        <a href="ver_compras" class="list-group-item list-group-item-action bg-light">
+        <!-- <a href="ver_compras" class="list-group-item list-group-item-action bg-light">
           <i class="fa fa-bars mr-2"> {% load static %} <img src="{% static '/assets/icons/icon_cart.svg' %}">
           </i><small class="text-uppercase font-weight-bold" style="color: #A3A6B4;">Ventas</small>
-        </a>
+        </a> -->
 
 
         <a href="productos" class="list-group-item list-group-item-action bg-light">
