Agregando vista ventas

--- a/templatedjango/apptemplate/templates/base/template.html
+++ b/templatedjango/apptemplate/templates/base/template.html
@@ -200,6 +200,10 @@
 
         {% endblock listado_productos %}
 
+        {% block ventas %}
+
+        {% endblock ventas %}
+
       </div>
 
       <!-- /#page-content-wrapper -->
