--- a/templatedjango/apptemplate/templates/produccion/produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/produccion.html
@@ -84,10 +84,7 @@
                                 cambiar_enviar(select_productos, enviar_producto);
                             });
                             
-                            
-                            
-                            
-                            
+                              
                             // window.onload = function () {
                                 // };
                                 </script>
@@ -196,7 +193,8 @@
                                                             var tabla_valor_nombre = document.getElementById("nombre_producto{{producto.id_produccion}}");
                                                             var select_nombre_productos = document.getElementsByClassName("nombre_productos{{producto.id_produccion}}");
                                                             var select_categorias = document.getElementById("prueba{{producto.id_produccion}}");
-                                                            
+                                                            var input_editar = document.getElementById('iden')
+                                                            var select_enviar = document.getElementById('select_default{{producto.id_produccion}}')
                                                             
                                                             
                                                             filtro_editar(opciones_categorias,tabla_valor_producto); 
@@ -210,8 +208,10 @@
                                                                 filtro(select_categorias,select_nombre_productos);
                                                             });
                                                             
+                                                            // cambiar_enviar(input_editar,select_enviar)
+
                                                             
-                                                            
+                                                            console.log(input_editar)
                                                             
                                                             </script>
 
@@ -221,10 +221,11 @@
                                                             <input name="precio" value="{{compra.precio}}" type="text"
                                                             class="form-control" id="recipient-name">
                                                         </div>
-
-                                                        <input type="hidden" name="iden"
-                                                            value="{{compra.id_detalles_compras}}">
-
+                                                        
+                                                        <input type="hidden" id="iden" name="iden" value="nothing">
+                                                        <input type="hidden" name="editar"
+                                                        value="editar">
+                                                        
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-outline-danger"
